# yna

./: CMakeLists.txt
example/: CMakeLists.txt  program.cpp
include/: boundingbox.h  boundingfrustum.h  boundingsphere.h  color.h  containmenttype.h  game.h  gamecomponentcollection.h  gameservicecontainer.h  gametime.h  gamewindow.h  graphicsdevicemanager.h  iserviceprovider.h  matrix.h  plane.h  planeintersectiontype.h  platform.h  point.h  property.h  quaternion.h  rectangle.h  stream.h  type.h  vector2.h  vector3.h  vector4.h
include/content/: contentmanager.h  contentreader.h  contenttypereader.h  contenttypereadermanager.h
include/graphics/: bufferusage.h  clearoptions.h  effect.h  graphicsdevice.h  graphicsresource.h  igraphicsdeviceservice.h  model.h  primitivetype.h  spritefont.h  surfaceformat.h  texture.h  texture2d.h  vertexbuffer.h  vertexdeclaration.h  vertexelement.h
src/: CMakeLists.txt  boundingbox.cpp  boundingbox.h  boundingfrustum.cpp  boundingfrustum.h  boundingsphere.cpp  boundingsphere.h  color.cpp  color.h  containmenttype.h  game.cpp  game.h  gamecomponentcollection.cpp  gameplatform.cpp  gameplatform.h  gameplatform.win32.cpp  gameservicecontainer.cpp  gameservicecontainer.h  gametime.cpp  gamewindow.cpp  graphicsdevicemanager.cpp  graphicsdevicemanager.h  matrix.cpp  matrix.h  plane.cpp  plane.h  point.cpp  point.h  property.h  quaternion.cpp  quaternion.h  rectangle.cpp  rectangle.h  shl_glmath.h  type.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  (+1 more)
src/content/: CMakeLists.txt  contentmanager.cpp  contentmanager.h  contentreader.cpp  contentreader.h  contenttypereader.cpp  contenttypereadermanager.cpp  texture2dreader.cpp  texture2dreader.h
src/content/pipline/: contentitem.cpp  contentitem.h  textureimporter.cpp  textureimporter.h
src/content/pipline/graphics/: texturecontent.cpp  texturecontent.h
src/graphics/: CMakeLists.txt  effect.cpp  effect.h  glextl.cpp  graphicscontext.cpp  graphicscontext.h  graphicsdevice.cpp  graphicsdevice.h  graphicsresource.cpp  graphicsresource.h  model.cpp  spritefont.cpp  spritefont.h  texture.cpp  texture2d.cpp  texture2d.h  vertexbuffer.cpp  vertexdeclaration.cpp  vertexelement.cpp
tests/: CMakeLists.txt  doctest-main.cpp  test-gamewindow.cpp  test-property.cpp  test-quaternion.cpp  test-rectangle.cpp  test-vector2.cpp  test-vector3.cpp  test-vector4.cpp
